# truthprint

./: .gitignore  README.md  Truthprint_부서공유_발표자료_KO.pptx
.github/workflows/: ci.yml
code/: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
code/.github/workflows/: ci.yml
code/examples/: demo_core.py  demo_linguistic.py
code/scripts/: eval_baselines.py  reproduce_table.py
code/tests/: test_baselines.py  test_primitives.py  test_roundtrip.py
code/truthprint/: __init__.py  baselines.py  carriers.py  cli.py  coding.py  core.py  invariants.py  linguistic.py  payload.py  util.py
docs/: index.html
paper/: Makefile  README.md  main.aux  main.out  main.tex  references.bib
paper/reference/: truthprint_linguistic_demo.py  truthprint_poc.py
patent/: README.md  truthprint-patent-20260723.pptx
ppt/: README.md  truthprint-poster-en-1page.pptx  truthprint_presentation_ko_20260723.pptx
